# fastack-sqlmodel

./: pyproject.toml
examples/sqlmodel/: Pipfile
examples/sqlmodel/app/: models.py
examples/sqlmodel/app/commands/: book.py
examples/sqlmodel/app/controllers/: __init__.py
examples/sqlmodel/app/controllers/book/: __init__.py
examples/sqlmodel/app/settings/: local.py  production.py
fastack_sqlmodel/: globals.py  helpers.py
