[tool.poetry]
name = "fastack-sqlmodel"
version = "0.1.0"
description = "SQLModel integration for fastack"
authors = ["aprilahijriyan <37798612+aprilahijriyan@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
fastack = "^2.0.3"
sqlmodel = "^0.0.5"

[tool.poetry.dev-dependencies]
pre-commit = "^2.16.0"
ipython = "^7.30.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
